# eodhd-ez

./: .env.template  .gitignore  .ruff.toml  LICENSE  README.md  pyproject.toml
eodhd_ez/: __init__.py  typing.py
eodhd_ez/client/: __init__.py  base_api.py  client.py
eodhd_ez/exchanges/: __init__.py  exchanges.py
eodhd_ez/fundamentals/: fundamental_data.py  general.py
eodhd_ez/historical_data/: __init__.py  intraday.py
eodhd_ez/tickers/: __init__.py  tickers.py
eodhd_ez/types/: __init__.py  analyst_ratings.py  earnings.py  enums.py  esg_scores.py  financials.py  fundamental_data.py  general.py  highlights.py  holders.py  insider_transactions.py  outstanding_shares.py  shares_stats.py  splits_dividends.py  technicals.py  valuation.py
eodhd_ez/utils/: __init__.py  filters.py  intervals.py
notebooks/: api_calls.py  eodhd-ez.ipynb  eodhd.ipynb  exchanges.ipynb  find_the_keepers.ipynb  fundamental_data.json  fundamentals.ipynb  intra_day_historical_data.ipynb  linear_gains.ipynb  session_cache_debugger.ipynb  threads.ipynb  ticker.ipynb  tickers.ipynb  tipranks.ipynb
scripts/: get_all_stock_fundamentals.py
